--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
-    /*background-color: green;*/
+    background-color: rgb(0, 0, 0, 0.89);
     color: white;
 }
-#section::before{
+/*#section::before{
     content: " ";
     background-color: black;
     position: absolute;
@@ -12,7 +12,7 @@
     height: 1000rem;
     width: 100%;
     opacity: 0.89;
-}
+}*/
 element{
     margin: 15px 5px 15px 15px;
     color: white;
