--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root{
-    background-color: rgb(0, 0, 0,0.89);
-    color: white;
+    background-color: rgb(0, 0, 0,0.89); /*for background color black and opacity 0.89*/
+    color: white; /*all text color white*/
 }
 html{
-    scroll-behavior: smooth;
+    scroll-behavior: smooth; 
 }
 /*#section::before{
     content: " ";
@@ -16,10 +16,11 @@ html{
     height: ;
     width: 100%;
     opacity: 0.89;
-}*/
+}
+/*the element in list of navbar*/
 element{
     margin: 15px 5px 15px 15px;
-    color: white;
+    color: white; 
 }
 #navbar{
     display: flex;
@@ -38,6 +39,7 @@ element{
     width: 100%;
     opacity: 0.7;
 }
+/*small logo and name in navbar*/
 #logo{
     height: 3rem;
     width: 3rem;
@@ -50,6 +52,7 @@ element{
     align-items: flex-start;
     justify-content: center;
 }
+/*list and its element in navbar*/
 .nav_list{
     list-style: none;
     display: flex;
@@ -66,6 +69,7 @@ element{
     cursor: pointer;
     color: black;
 }
+/*main image in about me*/
 #mainimg{
     margin-top: 1%;
     margin-left: 5%;
@@ -76,9 +80,11 @@ main{
     display: grid;
     grid-template-columns: 30% 70%;
 }
+/* my name in 40px*/
 span{
     font-size: 40px;
 }
+/*all the headings about us, hobbies, social are h3*/
 h3{
     color: white;
     font-size: 2.5rem;
@@ -102,6 +108,7 @@ h3{
     font-size: 2rem;
     margin: 5%;
 }
+/*hobbies section*/
 #hobbies{
     display: flex;
     flex-direction: row;
@@ -129,6 +136,7 @@ h3{
     font-size: 30px;
     color: white;
 }
+/*socilas section*/
 #socials{
     display: flex;
     flex-direction: row;
@@ -145,36 +153,43 @@ h3{
     flex-direction: column;
     font-size: 30px;
 }
+/*all the images used in social ( ek single class bana ke bhi kar sakta tha ) */
 #social1 img{
     height: 10rem;
     width: 10rem;
     margin-left: auto;
     margin-right: auto;
-}#social2 img{
-    height: 10rem;
-    width: 10rem;
-    margin-left: auto;
-    margin-right: auto;
-}#social3 img{
+}
+#social2 img{
     height: 10rem;
     width: 10rem;
     margin-left: auto;
     margin-right: auto;
 }
+#social3 img{
+    height: 10rem;
+    width: 10rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+/*footer*/
 footer{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
+/* the a in list of navbar */
 a{
     text-decoration: none;
     color: white;
 }
+/*the a in para ( know more wala ) */
 p a{
     text-decoration: underline;
     color: blue;
-}
+} 
+/* a in footer */
 footer a{
     text-decoration: underline;
     color: blue;
